--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9452959834858393"
      crossorigin="anonymous">
      </script>
+    <meta name="google-adsense-account" content="ca-pub-9452959834858393">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script type="module">
 import RefreshRuntime from "/@react-refresh"
